簡化頁面 header buttom

--- a/templates/relic/header.html
+++ b/templates/relic/header.html
@@ -16,7 +16,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
      <head>
      <meta charset="utf-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <title>Relic &mdash; A free Responsive HTML5 Template by FREEHTML5.CO</title>
+     <title>NCNU CSIE</title>
      <meta name="viewport" content="width=device-call, initial-scale=1">
      <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
        <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -62,7 +62,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
      <![endif]-->
      <style>
          #fh5co-hero {
-         height: 200px;
+         height: 180px;
        }
  
      </style>
@@ -76,8 +76,8 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
              <div class="fh5co-nav-inner">
                  <ul id="fh5co-main-nav">
                      <li><a href="">Home</a></li>
-                     <li><a href="photos">Photos</a></li>
-                     <li><a href="portfolio.html">Portfolio</a></li>
+                     <li><a href="../photos">Photos</a></li>
+                     <li><a href="../search">Search</a></li>
                      <li><a href="services.html">Services</a></li>
                      <li><a href="contact.html">Contact</a></li>
                      <li class="active"><a href="elements.html">Elements</a></li>
