--- a/templates/relic/photos.html
+++ b/templates/relic/photos.html
@@ -50,88 +50,4 @@
 		</main>
 		<!-- Main -->
 	
-		<!-- Footer -->
-		<footer role="contentinfo">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-3">
-						<h2 class="fh5co-footer-title">About</h2>
-						<p>A Free HTML5 templates created by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a> &amp; Images by <a href="http://unsplash.com" target="_blank">Unsplash.com</a></p>
-					</div>
-					<div class="col-md-5">
-						<h2 class="fh5co-footer-title">Offices</h2>
-						<div class="row">
-							<div class="col-md-6">
-								<h3 class="h4">New York</h3>
-								<address>2926 Bicetown Road <br> New York, NY 10016</address>
-							</div>
-							<div class="col-md-6">
-								<h3 class="h4">Alaska</h3>
-								<address>1806 Veltri Drive <br> Anchorage, AK 99503</address>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-2">
-						<h2 class="fh5co-footer-title">Links</h2>
-						<ul class="fh5co-footer-links">
-							<li><a href="#">FREEHTML5.co</a></li>
-							<li><a href="#">Smashingmagazine</a></li>
-							<li><a href="#">A List Apart</a></li>
-							<li><a href="#">Creative Market</a></li>
-						</ul>
-					</div>
-					<div class="col-md-2">
-						<h2 class="fh5co-footer-title">Connect</h2>
-						<ul class="fh5co-footer-links">
-							<li><a href="#" class="fh5co-link"><i class="fa fa-twitter"></i>Twitter</a></li>
-							<li><a href="#" class="fh5co-link"><i class="fa fa-facebook-square"></i>Facebook</a></li>
-							<li><a href="#" class="fh5co-link"><i class="fa fa-github"></i>Github</a></li>
-							<li><a href="#" class="fh5co-link"><i class="fa fa-linkedin-square"></i>LinkedIn</a></li>
-							<li><a href="#" class="fh5co-link"><i class="fa fa-google"></i>Google Plus</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-md-12">
-						<div class="fh5co-copyright">
-							<p class="pull-left">&copy;	Relic 2015. All Rights Reserved. <br> Lovely crafted by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a> Images by <a href="http://unsplash.com/">Unsplash</a> </p> 
-							<ul class="pull-right fh5co-footer-social">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				
-			</div>
-		</footer>
-		<!-- Footer -->
-
-		<!-- Go To Top -->
-		<a href="#" class="fh5co-gotop"><i class="ti-angle-up"></i></a>
-		
-			
-		<!-- jQuery -->
-		<script src="{{ STATIC_URL }}relic/js/jquery-1.10.2.min.js"></script>
-		<!-- jQuery Easing -->
-		<script src="{{ STATIC_URL }}relic/js/jquery.easing.1.3.js"></script>
-		<!-- Bootstrap -->
-		<script src="{{ STATIC_URL }}relic/js/bootstrap.js"></script>
-		<!-- Owl carousel -->
-		<script src="{{ STATIC_URL }}relic/js/owl.carousel.min.js"></script>
-		<!-- Magnific Popup -->
-		<script src="{{ STATIC_URL }}relic/js/jquery.magnific-popup.min.js"></script>
-		<!-- Easy Responsive Tabs -->
-		<script src="{{ STATIC_URL }}relic/js/easyResponsiveTabs.js"></script>
-		<!-- FastClick for Mobile/Tablets -->
-		<script src="{{ STATIC_URL }}relic/js/fastclick.js"></script>
-		<!-- Velocity -->
-		<script src="{{ STATIC_URL }}relic/js/velocity.min.js"></script>
-		<!-- Main JS -->
-		<script src="{{ STATIC_URL }}relic/js/main.js"></script>
-
-	</body>
-</html>
+		{% include "relic/buttom.html" %}	
