--- a/templates/relic/index.html
+++ b/templates/relic/index.html
@@ -15,7 +15,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Relic &mdash; A free Responsive HTML5 Template by FREEHTML5.CO</title>
+	<title>NCNU CSIE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
   	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -78,7 +78,7 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 				<ul id="fh5co-main-nav">
 					<li class="active"><a href="">Home</a></li>
 					<li><a href="photos">Photos</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="../search">Search</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="elements.html">Elements</a></li>
@@ -255,82 +255,67 @@ DESIGNED & DEVELOPED by FREEHTML5.CO
 		<!-- Main -->
 		
 		
-		<!-- Footer -->
-		<footer role="contentinfo">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-3">
-						<h2 class="fh5co-footer-title">About</h2>
-						<p>A Free HTML5 templates created by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a> &amp; Images by <a href="http://unsplash.com" target="_blank">Unsplash.com</a></p>
-					</div>
-					<div class="col-md-5">
-						<h2 class="fh5co-footer-title">Offices</h2>
-						<div class="row">
-							<div class="col-md-6">
-								<h3 class="h4">New York</h3>
-								<address>2926 Bicetown Road <br> New York, NY 10016</address>
-							</div>
-							<div class="col-md-6">
-								<h3 class="h4">Alaska</h3>
-								<address>1806 Veltri Drive <br> Anchorage, AK 99503</address>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-2">
-						<h2 class="fh5co-footer-title">Links</h2>
-						<ul class="fh5co-footer-links">
-							<li><a href="https://www.csie.ncnu.edu.tw/">Official Website</a></li>
-						</ul>
-					</div>
-					<div class="col-md-2">
-						<h2 class="fh5co-footer-title">Connect</h2>
-						<ul class="fh5co-footer-links">
-							<li><a href="https://www.facebook.com/CSIESO.NCNU/" class="fh5co-link"><i class="fa fa-facebook-square"></i>Facebook</a></li>
-							<li><a href="https://github.com/NCNU-CSIE" class="fh5co-link"><i class="fa fa-github"></i>Github</a></li>
-						</ul>
-					</div>
-				</div>
+<!-- Footer -->
+<footer role="contentinfo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <h2 class="fh5co-footer-title">About</h2>
+                    <p>A Free HTML5 templates created by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a> &amp; Images by <a href="http://unsplash.com" target="_blank">Unsplash.com</a></p>
+                </div>
+                <div class="col-md-5 col-md-offset-2">
+                    <h2 class="fh5co-footer-title">Offices</h2>
+                    <address>54561<br>南投縣埔里鎮大學路 303 號</address>
+                </div>
+                <div class="col-md-2">
+                    <h2 class="fh5co-footer-title">Connect</h2>
+                    <ul class="fh5co-footer-links">
+                        <li><a href="https://www.facebook.com/CSIESO.NCNU/" class="fh5co-link"><i class="fa fa-facebook-square"></i>Facebook</a></li>
+                        <li><a href="https://github.com/NCNU-CSIE" class="fh5co-link"><i class="fa fa-github"></i>Github</a></li>
+                    </ul>
+                </div>
+            </div>
 
-				<div class="row">
-					<div class="col-md-12">
-						<div class="fh5co-copyright">
-							<p class="pull-left">&copy;	Relic 2015. All Rights Reserved. <br> Lovely crafted by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a> Images by <a href="http://unsplash.com/">Unsplash</a> </p> 
-							<ul class="pull-right fh5co-footer-social">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				
-			</div>
-		</footer>
-		<!-- Footer -->
-		
-		<!-- Go To Top -->
-		<a href="#" class="fh5co-gotop"><i class="ti-angle-up"></i></a>
-		
-			
-		<!-- jQuery -->
-		<script src="{{ STATIC_URL }}relic/js/jquery-1.10.2.min.js"></script>
-		<!-- jQuery Easing -->
-		<script src="{{ STATIC_URL }}relic/js/jquery.easing.1.3.js"></script>
-		<!-- Bootstrap -->
-		<script src="{{ STATIC_URL }}relic/js/bootstrap.js"></script>
-		<!-- Owl carousel -->
-		<script src="{{ STATIC_URL }}relic/js/owl.carousel.min.js"></script>
-		<!-- Magnific Popup -->
-		<script src="{{ STATIC_URL }}relic/js/jquery.magnific-popup.min.js"></script>
-		<!-- Easy Responsive Tabs -->
-		<script src="{{ STATIC_URL }}relic/js/easyResponsiveTabs.js"></script>
-		<!-- FastClick for Mobile/Tablets -->
-		<script src="{{ STATIC_URL }}relic/js/fastclick.js"></script>
-		<!-- Velocity -->
-		<script src="{{ STATIC_URL }}relic/js/velocity.min.js"></script>
-		<!-- Main JS -->
-		<script src="{{ STATIC_URL }}relic/js/main.js"></script>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="fh5co-copyright">
+                        <p class="pull-left">&copy;	Relic 2015. All Rights Reserved. <br> Lovely crafted by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a> Images by <a href="http://unsplash.com/">Unsplash</a> </p> 
+                        <ul class="pull-right fh5co-footer-social">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </footer>
+    <!-- Footer -->
 
-	</body>
+    <!-- Go To Top -->
+    <a href="#" class="fh5co-gotop"><i class="ti-angle-up"></i></a>
+    
+        
+    <!-- jQuery -->
+    <script src="{{ STATIC_URL }}relic/js/jquery-1.10.2.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="{{ STATIC_URL }}relic/js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="{{ STATIC_URL }}relic/js/bootstrap.js"></script>
+    <!-- Owl carousel -->
+    <script src="{{ STATIC_URL }}relic/js/owl.carousel.min.js"></script>
+    <!-- Magnific Popup -->
+    <script src="{{ STATIC_URL }}relic/js/jquery.magnific-popup.min.js"></script>
+    <!-- Easy Responsive Tabs -->
+    <script src="{{ STATIC_URL }}relic/js/easyResponsiveTabs.js"></script>
+    <!-- FastClick for Mobile/Tablets -->
+    <script src="{{ STATIC_URL }}relic/js/fastclick.js"></script>
+    <!-- Velocity -->
+    <script src="{{ STATIC_URL }}relic/js/velocity.min.js"></script>
+    <!-- Main JS -->
+    <script src="{{ STATIC_URL }}relic/js/main.js"></script>
+
+</body>
 </html>
